Cart mobile spacing fixed

--- a/assets/css/unminified/site-compatible/woocommerce-rtl.css
+++ b/assets/css/unminified/site-compatible/woocommerce-rtl.css
@@ -799,9 +799,9 @@
 .ast-woocommerce-cart-menu .ast-cart-menu-wrap .count:after {
   bottom: 100%;
   margin-bottom: 0;
-  margin-right: -6px;
-  height: 13px;
-  width: 13px;
+  margin-right: -.5em;
+  height: 1em;
+  width: 1em;
   right: 50%;
   top: -9px;
   content: ' ';
@@ -809,10 +809,8 @@
   pointer-events: none;
   border-width: 2px;
   border-style: solid;
-  -webkit-border-top-right-radius: 99px;
-  border-top-right-radius: 99px;
-  -webkit-border-top-left-radius: 99px;
-  border-top-left-radius: 99px;
+  -webkit-border-radius: 99px 99px 0 0;
+  border-radius: 99px 99px 0 0;
   border-bottom: 0;
 }
 
